Bug 484022 - Title and button in the "Edit Bookmark" panel should be aligned with the fields, star should be centered. r=mak77

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -60,6 +60,11 @@ toolbar[printpreview="true"] {
   font-weight: bold;
 }
 
+#editBMPanel_tagsSelector {
+  /* override default listbox width from xul.css */
+  width: auto;
+}
+
 menuitem.spell-suggestion {
   font-weight: bold;
 }
